Fixed announcement + blog title wrapping

--- a/core/static/core/css/blog-list.css
+++ b/core/static/core/css/blog-list.css
@@ -13,6 +13,7 @@
     margin: 0;
     margin-top: 8px;
     font-size: 2rem;
+    word-break: break-word;
 }
 .card-headers {
     display: flex;
